index.css
#end-date {
    margin-bottom: 5px;
}

p {
    margin: 5px;
}

h1 {
    font-family: 'Gelasio', serif;
}

form {
    text-align: center;
    margin: 25px;
}

#company-name, #initial-amount, #initial-date, #end-date  {
    border: solid rgb(50, 166, 86) 1px;
}

body {
    background-color: rgb(242, 209, 208)
}

.answer {
    text-align: center;
}

